--- a/css/style.css
+++ b/css/style.css
@@ -16,37 +16,90 @@ font-family: 'VT323', monospace;  for body text*/
 
 *, *:before, *:after {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 18pt;
+    font-size: 14pt;
     line-height: 1.5;
     color: var(--color-text);
-    background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(255,209,67,1) 0%, rgba(255,145,83,1) 90% );
-    font-family: 'VT323', Arial, Helvetica, sans-serif;
+    font-family: 'VT323', Helvetica, sans-serif;
     height: 100vh;
-    width: 100%;
-    overflow: hidden;
+    width: 100vw;
+    min-width: 250px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+}
+
+a {
+    text-decoration: none;
+    color: var(--color-text);
+}
+
+header a {
+    text-decoration: underline #F78154;
+}
+
+.wave {
+    background-image: url(../images/layer1.svg);
+    aspect-ratio: 16/9;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+header {
+    font-family: 'Passero One', Helvetica, sans-serif;
+    padding: 2rem;
+    text-align: center;
+    grid-column: 1 / 3;
+}
+
+.about {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    padding: 2rem;
     display: flex;
-    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
 }
 
-h1 {
-    font-family: 'Passero One', Arial, Helvetica, sans-serif;
-    font-size: 3rem;
-    margin: 0;
-    padding: 0;
+.buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 2 / 3;
+    grid-row: 2 / 4;
+    padding: 2rem;
 }
 
-main {
-    width: 80%;
-    max-width: 800px;
-    /* margin: 0 auto;
-    padding: 0 1rem; */
-    max-height: 720px;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
+.links {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    padding: 2rem;
+}
+
+footer {
+    font-family: 'Averia Sans Libre', Helvetica, sans-serif;
+    /* padding: 2rem; */
+    font-size: 12pt;
+    text-align: center;
+    grid-column: 1 / 3;
+    grid-row: 4 / 5;
+}
+
+@media screen and (max-width: 768px) {
+    /* body {
+        display: grid;
+
+    } */
+    header {
+        padding: 1rem;
+    }
+    .wave {
+        background-image: url(../images/layer2.svg);
+        aspect-ratio: 9/16;
+    }
 }
